[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/your_unit.gd" type="Script" id=1]
[ext_resource path="res://scenes/friendly_bars.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/rank_3D.tscn" type="PackedScene" id=3]

[sub_resource type="CubeMesh" id=1]

[sub_resource type="BoxShape" id=2]
extents = Vector3( 1, 1.00313, 1 )

[node name="Spatial" type="KinematicBody"]
script = ExtResource( 1 )

[node name="PlaceHolder" type="MeshInstance" parent="."]
mesh = SubResource( 1 )
material/0 = null

[node name="friendly_bars" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.42076, 0 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 2 )

[node name="rank" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.44277, -0.132541, -0.0148869 )

[connection signal="mouse_entered" from="." to="." method="_on_Spatial_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Spatial_mouse_exited"]
